# TheJointPokemonProject

./: .gitignore  Cargo.toml  Cross.toml  Justfile  Makefile  README.md  build.rs
.github/workflows/: build.yml  ci.yml  tests.yml
assets/localisation/: en_GB.json  en_lolcat.json
assets/textures/mappings/: amazing_player.json  lucas-sheet.json  red-blue.json  water_test.json
cross-scripts/: sdl_linux.sh
src/: main.rs
src/AssetCore/: assets.rs
src/I18NCore/: keys.rs  localisation.rs  mod.rs  parsing.rs
src/I18NCore/langs/: en_GB.rs  json_generate.rs
src/I18NCore/sections/: abilities.rs  enums.rs  items.rs  mod.rs  moves.rs  natures.rs  pokemon.rs
src/PKMNCore/: evolution.rs  mod.rs  moves.rs  pokemon.rs  rng.rs  trainer.rs
src/PKMNCore/battle/: battle.rs  events.rs  pokemon.rs
src/PKMNCore/boxes/: boxes.rs  mod.rs  pc.rs
src/PKMNCore/constants/: abilities.rs  enums.rs  items.rs  levels.rs  location.rs  moves.rs  natures.rs  pokemon.rs  typing.rs
src/assetcore/: assets.rs  gamedata.rs  mod.rs
src/files/: assets.rs
src/gamecore/: load.rs  mod.rs  play.rs
src/gamecore/content/: camera.rs
src/gamecore/engine/: load.rs  mod.rs  play.rs
src/i18n/: important.rs  localisation.rs  mod.rs  parsing.rs
src/i18n/langs/: en_GB.rs  json_generate.rs  (+1 more)
src/i18ncore/: keys.rs  loaded.rs  localisation.rs  mod.rs  parsing.rs
src/pkmncore/: battle.rs  battle_legacy.rs  evolution.rs  levels.rs  mod.rs  moves.rs  pokedex.rs  pokemon.rs  rng.rs  trainer.rs
src/sdlcore/: mod.rs  renderer.rs  window.rs
src/utils/: hex.rs  logger.rs  mod.rs  strings.rs
(+44 files in other folders)
