[package]
name = "tjpp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
current_platform = "0.2.0"
lazy_static = "1.5.0"
rand = "0.9.1"
sdl2-sys = "0.37.0"
serde = "1.0.219"
serde_json = "1.0.140"

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["use-pkgconfig", "static-link", "image"]
